# embedded_sdk

./: .clang-format  Jenkinsfile  README.md
bsp/esp32/: random_esp32.c  spi_esp32.c  uptime_esp32.c
bsp/freertos/: alloc_stm32.c  thread_freertos.c  timer_freertos.c
bsp/inc/: bsp_alloc.h  bsp_blob_storage.h  bsp_logging.h  bsp_random.h  bsp_spi.h  bsp_thread.h  bsp_timer.h  bsp_uptime.h
bsp/linux/: blob_storage_linux.c  random_linux.c  spi_linux.c  thread_linux.c  timer_linux.c  uptime_linux.c
bsp/rpi/: alloc_rpi.c  gpio_rpi.c  gpio_rpi.h  spi_rpi.c  thread_rpi.c  timer_rpi.c
bsp/stm32/: blob_storage_stm32.c  random_stm32.c  spi_stm32.c  uptime_stm32.c
bsp/zephyr/: alloc_zephyr.c  blob_storage_zephyr.c  logging_zephyr.c  random_zephyr.c  spi_zephyr.c  thread_zephyr.c  timer_zephyr.c  uptime_zephyr.c
examples/common/: example_common.c  example_common.h
examples/esp32/: CMakeLists.txt  README.md  sdkconfig
examples/esp32/src/: CMakeLists.txt  ah_spi_pins.h  main.c
examples/nrf5340/: CMakeLists.txt  README.md  prj.conf
examples/nrf5340/boards/: nrf5340dk_nrf5340_cpuapp.overlay
examples/nrf5340/src/: main.c
examples/rpi/: CMakeLists.txt  README.md
examples/rpi/src/: ah_spi_pins.h  main.c
examples/rpi_ip_proxy/: CMakeLists.txt  README.md
examples/rpi_ip_proxy/src/: main.c
examples/rpi_spi_ip_proxy/: CMakeLists.txt  README.md  test.py
examples/rpi_spi_ip_proxy/src/: ah_spi_pins.h  main.c
examples/stm32wb55/: .mxproject  CMakeLists.txt  README.md
examples/stm32wb55/src/: main.c  stm32_init.c
inc/: ah_sdk.h  ah_types.h  ah_typesEyetracking.h  ah_vector.h
src/: ah_api.c  ah_api.h  ah_api_decoders.c  ah_api_decoders.h  ah_sdk.c  alloc.c  blob_api.c  blob_api.h  packet.h  request.c  request.h  spi_master.c  spi_master.h  tracker_info.c  tracker_info.h  util.h
